# serializer version: 1
# name: test_automation
  list([
    'report.csv',
    'reports-by-task.yaml',
    'reports-token-stats.yaml',
    'reports.yaml',
  ])
# ---
# name: test_automation.1
  tuple(
    'report.csv',
    '''
      task_id,model_id,task_name,label,details
      "light_on_door_light_on_door-light_on_door-0","assistant","light_on_door-test_blueprint_inputs","Bad","AssertionError: Blueprint content is not available"
      "light_on_door_light_on_door-light_on_door-0","assistant","light_on_door-test_door_open","Bad","AssertionError: Could not extract YAML from model response: Sorry, I am not aware of any area called # Light on door ## Problem statement Create an blueprint au..."
      "light_on_door_light_on_door-light_on_door-0","assistant","light_on_door-test_door_open_close","Bad","AssertionError: Could not extract YAML from model response: Sorry, I am not aware of any area called # Light on door ## Problem statement Create an blueprint au..."
      "light_on_door_light_on_door-light_on_door-0","assistant","light_on_door-test_light_timeout","Bad","AssertionError: Could not extract YAML from model response: Sorry, I am not aware of any area called # Light on door ## Problem statement Create an blueprint au..."
  
    ''',
  )
# ---
# name: test_automation.2
  tuple(
    'reports-by-task.yaml',
    '''
      ---
      - task_id: light_on_door_light_on_door-light_on_door-0
        good_percent: 0.0%
        confidence_interval: 0.0%
        good: 0
        total: 4
      
  
    ''',
  )
# ---
# name: test_automation.3
  tuple(
    'reports-token-stats.yaml',
    '''
      --- []
      
  
    ''',
  )
# ---
# name: test_automation.4
  tuple(
    'reports.yaml',
    '''
      ---
      - model_id: assistant
        good_percent: 0.0%
        confidence_interval: 0.0%
        good: 0
        total: 4
      
  
    ''',
  )
# ---
